# home-finance-manager

./: README.md
api/: .env.example  .gitignore  Cargo.toml  README.md  database.json  docker-compose.yaml  makefile
api/migrations/: 20230325010813-add-persons.js  20230325012048-add-accounts.js
api/migrations/sqls/: 20230325010813-add-persons-up.sql  20230325012048-add-accounts-up.sql
api/src/: main.rs
api/src/db-setup/: setup.sql  test.sql
api/src/domain/: error.rs  fetch.rs  mod.rs  models.rs  result.rs  upload.rs
client/: README.md  package-lock.json
