[package]
name = "home_finance_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "mysql", "chrono", "decimal" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
rust_decimal = "1.29.1"